[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Metal2.material" type="Material" id=1]
[ext_resource path="res://props/crate_boom.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.55, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 1, 1, 1 )

[sub_resource type="SphereShape" id=3]

[node name="crate" type="RigidBody" groups=["explosive", "interactable"]]
collision_layer = 3
mass = 100.0
gravity_scale = 2.0
angular_damp = 2.0
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
